common/compressor: fix the issue that cannot processed concurrently

Now, one session cannot support concurrent and it will lead to crash.
So there are mutil session using. At same time, it also can improve
the performance.

Fixes: https://tracker.ceph.com/issues/54361

Signed-off-by: Feng Hualong <hualong.feng@intel.com>